--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/container"
         >
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_send"
+            android:visibility="invisible"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:width="200dp"
+            android:height="80dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="110dp"
+            android:text="send result"
+            />
         <TextView
             android:id="@+id/text_view"
             android:layout_width="wrap_content"
@@ -194,7 +205,7 @@
                 android:id="@+id/btn_equal"
                 style="@style/Orange.Button"
                 android:text="="
-                android:onClick="onOperationClick"
+                android:onClick="onEqualClick"
                 />
         </LinearLayout>
 
