--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="orange">#ff9f0a</color>
     <color name="gray">#a5a5a5</color>
     <color name="dark_gray">#333333</color>
+    <color name="charcoal">#405260</color>
+    <color name="pink">#f13d58</color>
+    <color name="white_blue">#f1f5f8</color>
 </resources>
