--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,12 @@
         <item name="backgroundTint">@color/dark_gray</item>
         <item name="android:textColor">@color/white</item>
     </style>
+    <style name="White.Button" parent="Widget.MaterialComponents.Button">
+        <item name="backgroundTint">@color/white</item>
+        <item name="android:textColor">@color/gray</item>
+        <item name="android:layout_width">350dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="cornerRadius">20dp</item>
+    </style>
+
 </resources>
