--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,4 +7,13 @@
     </style>
 
     <style name="Theme.Geeks_2_hw_7" parent="Base.Theme.Geeks_2_hw_7" />
+
+    <style name="Theme.Geeks_2_hw_7.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.Geeks_2_hw_7.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.Geeks_2_hw_7.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
