--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,37 +4,83 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment"
     android:background="@color/white_blue"
-    >
+    tools:context=".ui.home.HomeFragment">
 
     <TextView
         android:id="@+id/text_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="30dp"
         android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@+id/linear_layout"
+
         />
-    <LinearLayout
-        android:gravity="center"
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="Policies"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:layout_marginTop="102dp"
         app:layout_constraintEnd_toEndOf="parent"
-        >
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_off"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/linear_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="160dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <EditText
             style="@style/White.Button"
-            android:text="Policy"
-            />
+            android:background="@drawable/img_logo"
+            android:drawableEnd="@drawable/ic_arrow_right"
+            android:text="Policy" />
+
+        <EditText
+            style="@style/White.Button"
+            android:background="@drawable/img_logo"
+            android:drawableEnd="@drawable/ic_arrow_right"
+            android:text="Product Category" />
+
+        <EditText
+            style="@style/White.Button"
+            android:background="@drawable/img_logo"
+            android:drawableEnd="@drawable/ic_arrow_right"
+            android:text="Origin Country" />
+
+        <EditText
+            android:id="@+id/edit_text_last"
+            style="@style/White.Button"
+            android:background="@drawable/img_logo"
+            android:drawableEnd="@drawable/ic_arrow_right"
+            android:text="Brand" />
+
     </LinearLayout>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_export"
+        android:layout_width="282dp"
+        android:layout_height="52dp"
+        android:text="Export as csv"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/pink"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_home"
+        android:layout_marginTop="40dp"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
